dfir_rs/tests/compile-fail-stable/surface_badgeneric_extra.rs
../compile-fail/surface_badgeneric_extra.rs